0.4.19/_sources/gallery/scale_bar.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scale_bar.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_scale_bar.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scale_bar.py:


Scale bar
=========

Display a 3D volume and the scale bar

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 9-28



.. image-sg:: /gallery/images/sphx_glr_scale_bar_001.png
   :alt: scale bar
   :srcset: /gallery/images/sphx_glr_scale_bar_001.png
   :class: sphx-glr-single-img





.. code-block:: Python

    from skimage import data

    import napari

    cells = data.cells3d()

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_image(
        cells,
        name=('membrane', 'nuclei'),
        channel_axis=1,
        scale=(0.29, 0.26, 0.26),
    )
    viewer.scale_bar.visible = True
    viewer.scale_bar.unit = "um"

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_scale_bar.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: scale_bar.ipynb <scale_bar.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: scale_bar.py <scale_bar.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
